Changes to Home and About me pages

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ baseurl: "/gamescode" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: @senpais
+    twitter: senpais
     github: victor-vargas2009
 
 # Set this to true to get LaTeX math equation support
